Implemented Firebase Login
